--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,7 +12,7 @@ const randomMessage =
 
 <PageLayout
   title='404 - Page Not Found'
-  description="The page you're looking for doesn't exist"
+  description="The page you're looking for on chip fractalcounty's website doesn't exist"
 >
   <section
     class='animate relative flex flex-col items-center justify-center gap-y-8 pt-12 text-center'
