--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,9 @@ import Subheader from '@/components/layout/Subheader.astro'
 import Link from '@/components/Link.astro'
 import ProfilePageStructuredData from '@/components/meta/ProfilePageStructuredData.astro'
 import WebsiteStructuredData from '@/components/meta/WebsiteStructuredData.astro'
-import { HOME, LINKS_FOOTER, SITE } from '@/consts'
+import { LINKS_FOOTER, SITE } from '@/consts'
 import PageLayout from '@/layouts/PageLayout.astro'
+import { DevCache } from '@/lib/cache'
 import { Image } from 'astro:assets'
 import { getCollection } from 'astro:content'
 
@@ -98,10 +99,13 @@ async function fetchTopTracks() {
   }
 }
 
-const topTracks = await fetchTopTracks()
+const topTracks = await DevCache.get('lastfm-top-tracks', fetchTopTracks)
 ---
 
-<PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
+<PageLayout
+  title='Home'
+  description="chip fractalcounty's personal blog and portfolio website dedicated to various things and stuff."
+>
   <WebsiteStructuredData slot='structured-data' />
   <ProfilePageStructuredData slot='structured-data' />
   <Container as='section'>
